README and Icon changes
Updated README file to better reflect the actual state of the game. Also added and icon to the game application.